# Deve-Notebook

./: .gitignore  AGENTS.md  Cargo.toml  add_path_comments.ps1  build_cli_err.txt  build_cli_err_2.txt  build_cli_err_3.txt  build_core_2.txt  build_core_3.txt  build_core_4.txt  build_core_5.txt  build_core_err.txt  build_err.txt  build_watcher.txt  build_web_err.txt  build_web_err_2.txt  build_web_err_3.txt  build_web_err_4.txt  build_web_verify.txt  build_web_verify_2.txt  build_web_verify_3.txt  cli_error.txt  deve-note plan.md  deve-note schedule.md  dump.txt  dump_final.txt  dump_hello.txt  final_check_error.txt  ledger_error.txt  outline_error.txt  outline_error_2.txt  outline_error_3.txt  outline_error_4.txt  outline_error_5.txt  repomix-output.xml  scan.txt  sidebar_error.txt  verify_debug.txt  verify_final.txt  web_error.txt  (+1 more)
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/commands/: dump.rs  export.rs  init.rs  mod.rs  node_check.rs  scan.rs  seed.rs  serve.rs  verify_p2p.rs  watch.rs
apps/cli/src/server/: agent_bridge.rs  ai_chat.rs  channel.rs  metrics.rs  mod.rs  node_role.rs  node_role_http.rs  plugin_host.rs  prewarm.rs  rate_limit.rs  security.rs  session.rs  setup.rs  source_control_proxy.rs  ws.rs
apps/cli/src/server/ai_chat/: config.rs  mod.rs  sse_parser.rs  stream.rs  types.rs
apps/cli/src/server/auth/: brute_force.rs  handlers.rs  headers.rs  middleware.rs  mod.rs
apps/cli/src/server/handlers/: docs.rs  document.rs  key_exchange.rs  listing.rs  merge.rs  mod.rs  plugin.rs  search.rs  source_control.rs  switcher.rs  sync.rs  system.rs
apps/cli/src/server/mcp/: http.rs  mod.rs  protocol.rs  sse.rs  stdio.rs
apps/cli/src/server/ws/: mod.rs  send.rs
apps/cli/tests/: agent_bridge_test.rs
apps/web/: Cargo.toml  Trunk.toml  builder.js  check_err.txt  check_err_2.txt  check_err_3.txt  editor_adapter.js  err_final.txt  index.html  package-lock.json  package.json  tailwind.config.js  touch_trigger_10.txt  touch_trigger_11.txt  touch_trigger_12.txt  touch_trigger_13.txt  touch_trigger_14.txt  touch_trigger_15.txt  touch_trigger_16.txt  touch_trigger_17.txt  touch_trigger_18.txt  touch_trigger_19.txt  touch_trigger_20.txt  touch_trigger_21.txt  touch_trigger_23.txt  touch_trigger_8.txt  touch_trigger_9.txt
apps/web/js/: editor_adapter.js  editor_remote_ops.js  editor_state.js  init.js
apps/web/js/extensions/: block_styling.js  blockquote_border.js  checkbox.js  checkbox_ext.js  code_block_highlight.js  code_icons.js  code_menu.js  code_toolbar.js  copy_tex.js  frontmatter_parser.js  hybrid.js  hyperlink_click.js  image.js  inline_renderer.js  inline_utils.js  list_marker.js  math.js  math_parser.js  mermaid.js  mermaid_parser.js  nesting_utils.js  table.js  table_parser.js  utils.js
apps/web/public/js/: editor.bundle.js
apps/web/src/: api.rs  app.rs  editor.rs  i18n.rs  main.rs
apps/web/src/api/: backoff.rs  connection.rs  mod.rs  output.rs
apps/web/src/components/: activity_bar.rs  bottom_bar.rs  branch_switcher.rs  command_palette.rs  create_modal.rs  desktop_chat_panel.rs  desktop_layout.rs  diff_view.rs  disconnect_overlay.rs  dropdown.rs  header.rs  input_modal.rs  layout_context.rs  main_layout.rs  merge_modal.rs  merge_modal_slot.rs  merge_panel.rs  mod.rs  outline.rs  outline_render.rs  playback.rs  search_modal.rs  settings.rs  settings_sections.rs  sidebar.rs  sidebar_menu.rs  spectator_overlay.rs
apps/web/src/components/activity_bar/: mod.rs  popup_menu.rs  types.rs
apps/web/src/components/branch_switcher/: mod.rs
apps/web/src/components/chat/: actions.rs  drag_overlay.rs  drop_handler.rs  empty_state.rs  header.rs  input_area.rs  message_item.rs  message_list.rs  mod.rs  panel.rs
apps/web/src/components/command_palette/: commands.rs  mod.rs  registry.rs  types.rs
apps/web/src/components/dashboard/: actions_card.rs  health_card.rs  mod.rs  storage_card.rs  sync_card.rs
apps/web/src/components/diff_view/: anchor.rs  body.rs  cache.rs  fold.rs  fold_controls.rs  (+16 more)
apps/web/src/editor/: ffi.rs  hook.rs  mod.rs  playback.rs  prefetch.rs  sync.rs
apps/web/src/hooks/: mod.rs  use_core.rs  use_ctrl_key.rs  use_layout.rs  use_outline.rs  use_shortcuts.rs
apps/web/src/i18n/: bottom_bar.rs  chat.rs  command_palette.rs  common.rs  context_menu.rs  diff.rs  header.rs  merge.rs  mod.rs  playback.rs  search.rs  settings.rs  sidebar.rs  source_control.rs
apps/web/src/shortcuts/: config.rs  global.rs  mod.rs  registry.rs  types.rs
apps/web/src/utils/: markdown.rs  mod.rs
apps/web/style/: _base.css  _blockquote.css  _code-block.css  _math.css  _selection.css  _typography.css  _variables-dark.css  _variables.css  _widgets.css  codemirror.css  tailwind.css
crates/core/: Cargo.toml
crates/core/benches/: sync_bench.rs
crates/core/src/: config.rs  error.rs  ledger.rs  lib.rs  models.rs  protocol.rs  state.rs  sync.rs  vfs.rs  watcher.rs
crates/core/src/context/: mod.rs  tree.rs
crates/core/src/ledger/: compat.rs  database.rs  init.rs  listing.rs  merge.rs  metadata.rs  mod.rs  node_check.rs  ops.rs  range.rs  repo_type.rs  schema.rs  shadow.rs  shadow_manager.rs  snapshot.rs  source_control.rs  tests.rs  traits.rs
crates/core/src/mcp/: config.rs  executor.rs  manager.rs  mod.rs  protocol.rs
crates/core/src/plugin/: loader.rs  manifest.rs  mod.rs  runtime.rs
crates/core/src/protocol/: client.rs  mod.rs  server.rs
crates/core/src/search/: mod.rs
crates/core/src/security/: auth.rs  cipher.rs  hashing.rs  keypair.rs  mod.rs
crates/core/src/skill/: mod.rs
crates/core/src/source_control/: api.rs  changes.rs  commits.rs  diff.rs  mod.rs  snapshot_paths.rs  staging.rs  types.rs
crates/core/src/state/: rope_utf16.rs  tests.rs  utf16.rs
crates/core/src/sync/: buffer.rs  engine.rs  handler.rs  mod.rs  protocol.rs  rebuild.rs  reconcile.rs  recovery.rs  scan.rs  snapshot_policy.rs  vector.rs
crates/core/src/tree/: delta.rs  manager.rs  mod.rs  node.rs  ops.rs
crates/core/src/utils/: hash.rs  mod.rs  path.rs
crates/core/tests/: ai_chat_plugin_test.rs  context_test.rs  plugin_test.rs  skill_test.rs
(+255 files in other folders)
