[workspace]
members = [
    "apps/cli",
    "apps/web",
    "crates/core",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Deve-Note Contributors"]
license = "MIT"
repository = "https://github.com/develeta/deve-note"

[workspace.dependencies]
# Intra-workspace dependencies
deve_core = { path = "crates/core" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage & CRDT
redb = "2.0"
# loro = "1.0" # TBD: Add Loro when we start implementing CRDT

# Frontend
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

