[workspace]
members = [
    "apps/cli",
    "apps/web",
    "crates/core",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Deve-Note Contributors"]
license = "MIT"
repository = "https://github.com/develeta/deve-note"

[workspace.dependencies]
# Intra-workspace dependencies
deve_core = { path = "crates/core" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage & CRDT
redb = "2.0"
smol_str = { version = "0.3", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
# loro = "1.0" # TBD: Add Loro when we start implementing CRDT

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Frontend
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

# ============================================================================
# Release Profile 优化配置
# ============================================================================
# 注: 由于 Cargo 限制，package-specific profile 只能覆盖以下字段:
#     opt-level, debug, debug-assertions, overflow-checks, codegen-units, strip
# panic 和 lto 必须在子 crate 的 Cargo.toml 中配置。

[profile.release]
lto = "thin"              # 薄 LTO，平衡编译速度与优化
strip = "debuginfo"       # 移除调试信息，保留符号

# WASM 前端专用优化 (仅限 Cargo 允许的字段)
[profile.release.package.deve_web]
opt-level = "z"           # 体积优先 (比 "s" 更激进)
codegen-units = 1         # 单代码生成单元，最大化优化潜力
strip = true              # 移除所有符号和调试信息

