[package]
name = "deve_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
deve_core.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
bincode = "1.3"
redb.workspace = true
chrono = { version = "0.4", features = ["serde"] }
rhai = { version = "1.19", features = ["serde", "sync"] }
uuid.workspace = true
ctrlc = "3.4"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"

[dev-dependencies]
tempfile = "3.24"

[features]
default = []
search = ["deve_core/search"]
