[package]
name = "deve_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
console_error_panic_hook.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlElement", "Window", "KeyboardEvent", "Event", "EventTarget", "HtmlInputElement"] }
gloo-net = "0.6"
futures = "0.3"
serde.workspace = true
serde_json.workspace = true

# Use core models/types if needed, but for now we might mock or depend on core.
# Ideally web depends on core for types.
deve_core.workspace = true 
js-sys = "0.3.83"
gloo-timers = { version = "0.3", features = ["futures"] }
