[package]
name = "deve_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
console_error_panic_hook.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlElement", "Window", "KeyboardEvent", "Event", "EventTarget", "HtmlInputElement", "Location", "Storage"] }
base64 = "0.22"
gloo-net = "0.6"
futures = "0.3"
serde.workspace = true
serde_json.workspace = true

# Use core models/types if needed, but for now we might mock or depend on core.
# Ideally web depends on core for types.
deve_core.workspace = true 
js-sys = "0.3.83"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_old = { package = "getrandom", version = "0.2", features = ["js"] }
uuid.workspace = true
sublime_fuzzy = "0.7.0"
leptos-use = "0.18.0"
similar = "2.7.0"
