[package]
name = "deve_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
redb.workspace = true
bincode = "1.3"
walkdir = "2.5.0"
notify = "8.2.0"
file-id = "0.2.3"
crossbeam-channel = "0.5.15"
notify-debouncer-mini = "0.7.0"
dissimilar = "1.0.10"
