[package]
name = "deve_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
smol_str.workspace = true
smallvec.workspace = true
regex = "1.10"
chrono.workspace = true
dissimilar = "1.0.10"
similar = "2.7.0"
rhai = { version = "1.19", features = ["serde", "sync"] }
ed25519-dalek = "2.2.0"
rand = "0.8.5"
sha2 = "0.10.9"
aes-gcm = "0.10.3"
hex = "0.4.3"
config = "0.13"
dotenvy = "0.15"
bincode = "1.3"
argon2 = "0.5.3"
ignore = "0.4.25"
walkdir = "2.5.0"
reqwest-eventsource = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
getrandom_02 = { workspace = true }
uuid = { version = "1.8.0", features = ["v4", "js"] } 

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb.workspace = true
walkdir = "2.5.0"
notify = "8.2.0"
file-id = "0.2.3"
crossbeam-channel = "0.5.15"
notify-debouncer-mini = "0.7.0"
tempfile = "3.10"

[features]
default = []
search = ["tantivy"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tantivy]
version = "0.22"
optional = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "sync_bench"
harness = false
